--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.0",
     "dotenv": "^8.2.0",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "telegraf": "^3.38.0"
   }
 }
